--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "format": "prettier --write \"src/**/*.ts\""
+  },
   "devDependencies": {
     "@types/node": "^20.3.1",
     "@types/typescript": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "git-commit-msg-linter": "^5.0.4",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "prettier-eslint": "^15.0.1",
     "typescript": "^5.1.3"
   },
   "dependencies": {
