--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -22,6 +24,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
